# HMMs-posterior-dist

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
assignment/: assignment.ipynb  assignment.py  test_assignment.py  viterbi_assignment  viterbi_assignment.py
assignment/Data/: testHMM6.hmm  testHMM7.hmm  tweakedHMM.hmm
autograder/: snips.sh
